deploy/tamagotchi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tamagotchi
  namespace: tamagotchi
  labels:
    app.kubernetes.io/name: tamagotchi
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: tamagotchi
  ports:
    - name: http
      port: 8080
      targetPort: http
